# tinystate

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/: logo.png~
derive/: Cargo.toml
derive/src/: lib.rs
examples/: door.rs  traffic_light.rs  vending_machine.rs
src/: err.rs  lib.rs  transition.rs
