[package]
name = "tinystate-derive"
version = "0.1.0"
edition = "2024"
authors = ["Saverio Scagnoli <svscagn@gmail.com>"]
description = "Derive macros for tinystate finite state machine"
documentation = "https://docs.rs/tinystate-derive"
repository = "https://github.com/saverioscagnoli/tinystate"
homepage = "https://github.com/saverioscagnoli/tinystate"
license = "MIT"
readme = "../README.md"
keywords = ["dfa", "fsm", "automata", "state-machine", "derive"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
